# trylog

./: Cargo.toml
examples/: macros.rs
src/: README.md  lib.rs  macros.rs
