[package]
name = "trylog"
version = "0.3.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2021"
description = "Log if `Err` or `None`."
license = "MIT"
repository = "https://github.com/Berrysoft/trylog"
keywords = ["log", "logging"]
categories = ["development-tools::debugging"]
readme = "README.md"

[dependencies]
log = "0.4"

[dev-dependencies]
simple_logger = "4.0"
